kafka-test/filetargetapi.yaml
# kubectl rollout history deployment/filetarget-api-deployment
# kubectl set image deployment/filetarget-api-deployment filetarget-api=praisindo.azurecr.io/filetarget-api:latest
# kubectl rollout status deployment filetarget-api-deployment
apiVersion: v1
kind: Service
metadata:
  name: filetarget-api-service
  labels:
    app: filetarget-api
spec:
  #type: LoadBalancer
  # Kalau kita udah punya ip public nya. kalo belum kosongin aja, dia akan buat static
  # loadBalancerIP: 20.198.149.134
  ports:
  - port: 80
    targetPort: 80
    name: client
  selector:
    app: filetarget-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filetarget-api-deployment
  labels:
    app: filetarget-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: filetarget-api
  template:
    metadata:
      labels:
        app: filetarget-api
    spec:
      containers:
      - name: filetarget-api
        image: praisindo.azurecr.io/filetarget-api:929
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /liveness
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 20
