kafka-test/kafdrop.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafdrop-service
  labels:
    app: kafdrop
spec:
  #type: LoadBalancer
  # Kalau kita udah punya ip public nya. kalo belum kosongin aja, dia akan buat static
  # loadBalancerIP: 20.198.149.134
  ports:
  - port: 9000
    targetPort: 9000
    name: client
  selector:
    app: kafdrop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdrop-deployment
  labels:
    app: kafdrop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kafdrop
  template:
    metadata:
      labels:
        app: kafdrop
    spec:
      containers:
      - name: kafdrop
        image: obsidiandynamics/kafdrop:latest
        ports:
        - containerPort: 9000
