kafka-test/mssql-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-db-service
  labels:
    app: mssql-db
spec:
  # type: LoadBalancer
  ports:
  - port: 1433
    targetPort: 1433
    name: client
  selector:
    app: mssql-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql-db
spec:
  serviceName: "mssql-storage-service"
  replicas: 1
  selector:
    matchLabels:
      app: mssql-db
  template:
    metadata:
      labels:
        app: mssql-db
    spec:
      containers:
      - name: mssql-container
        image: mcr.microsoft.com/mssql/server:2019-latest
        volumeMounts:
        - name: mssql-st-vol
          mountPath: /var/opt/mssql/
        ports:
        - containerPort: 1433
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
  volumeClaimTemplates:
  - metadata:
      name: mssql-st-vol
    spec:
      accessModes: [ "ReadWriteOnce" ]
      # storageClassName: default
      resources:
        requests:
          storage: 3Gi
