kafka-test/mysql-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db-service
  labels:
    app: mysql-db
spec:
  # type: LoadBalancer
  ports:
  - port: 3306
    targetPort: 3306
    name: client
  selector:
    app: mysql-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-db
spec:
  serviceName: "mysql-storage-service"
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
      - name:  mysql-container
        image: mysql:latest
        volumeMounts:
        - name: mysql-db-vol
          mountPath: /var/lib/mysql # Error kalau pake /var/lib/mysql
        ports:
        - containerPort: 3306
        livenessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 30
          periodSeconds: 30
      securityContext:
        runAsUser: 1000
        fsGroup: 1000

  volumeClaimTemplates:
  - metadata:
      name: mysql-db-vol
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "default" # harus pakai disk kayaknya
      resources:
        requests:
          storage: 2Gi
