kafka-test/phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  labels:
    app: phpmyadmin
spec:
  #type: LoadBalancer
  # Kalau kita udah punya ip public nya. kalo belum kosongin aja, dia akan buat static
  # loadBalancerIP: 20.198.149.134
  ports:
  - port: 80
    targetPort: 80
    name: client
  selector:
    app: phpmyadmin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin:latest
        ports:
        - containerPort: 80
