kafka-test/test-php.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-php-service
  labels:
    app: test-php
spec:
  # type: LoadBalancer
  # Kalau kita udah punya ip public nya. kalo belum kosongin aja, dia akan buat static
  # loadBalancerIP: 20.198.149.134
  ports:
  - port: 80
    targetPort: 80
    name: client
  selector:
    app: test-php
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-php-deployment
  labels:
    app: test-php
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-php
  template:
    metadata:
      labels:
        app: test-php
    spec:
      containers:
      - name: test-php
        image: praisindo.azurecr.io/test/php:latest
        ports:
        - containerPort: 80
