kafka-test/testkafka-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: testkafka-service
  labels:
    app: testkafka
spec:
  # type: LoadBalancer
  # Kalau kita udah punya ip public nya. kalo belum kosongin aja, dia akan buat static
  # loadBalancerIP: 20.198.149.134
  ports:
  - port: 80
    targetPort: 80
    name: client
  selector:
    app: testkafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testkafka-deployment
  labels:
    app: testkafka
spec:
  replicas: 3
  selector:
    matchLabels:
      app: testkafka
  template:
    metadata:
      labels:
        app: testkafka
    spec:
      containers:
      - name: testkafka
        image: praisindo.azurecr.io/testkafka:910
        ports:
        - containerPort: 80
