kafka-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ptp-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    #buat sticky session
    nginx.ingress.kubernetes.io/affinity: 'cookie' 
spec:
  rules:
  - http:
      paths:
      - path: /testkafka
        pathType: Prefix
        backend:
          service:
            name: testkafka-service
            port:
              number: 80
      - path: /kafdrop
        pathType: Prefix
        backend:
          service:
            name: kafdrop-service
            port:
              number: 9000
      - path: /omsquery
        pathType: Prefix
        backend:
          service:
            name: omsquery-service
            port:
              number: 80
      - path: /filetarget-api
        pathType: Prefix
        backend:
          service:
            name: filetarget-api-service
            port:
              number: 80
  - host: "pma.az.praisindo.com"
    http:
      paths: 
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
